[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = {version = "1.0.178", features = ["derive"]}
serde_json = "1.0.104"
warp = "0.3.5"
tokio = {version = "1.29.1", features = ["macros"]}
